Correct alignment for Select db dropdown
aligned it to the right side of the navbar

--- a/src/f_spacial/src/containers/dropdown/stylesheets/Dropdown.css
+++ b/src/f_spacial/src/containers/dropdown/stylesheets/Dropdown.css
@@ -4,7 +4,7 @@
   margin-top: 20px;
 }
 div.dropdown-container {
-  float: left;
+  float: right;
   display: block;
   width: 250px;
   margin-top: 20px;
