--- a/src/f_spacial/src/containers/navbar/stylesheets/Navbar.css
+++ b/src/f_spacial/src/containers/navbar/stylesheets/Navbar.css
@@ -7,12 +7,16 @@
   justify-content: space-between;
 }
 
-#header .header_item{
+#header .header_item {
   flex: 1 1 0;
 }
 
-#header .header_search{
+#header .header_search {
   text-align: left;
+}
+
+#header .select_db {
+  padding-right: 20px;
 }
 
 .logo {
